--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
         app:layout_constraintVertical_bias="0.068" />
+
+    <Button
+        android:id="@+id/showQuoteButton"
+        android:layout_width="238dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="44dp"
+        android:background="#fff"
+        android:text="SHOW ANOTHER QUOTE"
+        android:textColor="#51b46d"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
